# examples

./: .gitignore  README.md  go.rst  index.rst  python.rst  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
ISSUE_TEMPLATE/: bug_report.md
azure-sqldw-sink-connector/: .gitignore  Dockerfile  Makefile  README.md  azure.sqldw.json  clickstream-connector.json  docker-compose.yml  env.sh  sqldw-config.json
ccloud/: Dockerfile  Dockerfile-confluenthub  Dockerfile-local  README.md  acl.sh  ccloud-delete-all-topics.sh  ccloud-generate-client-configs.sh  ccloud-generate-cp-configs.sh  cleanup_statements.sql  clients  config.sh  create_ksql_app.sh  create_ksqldb_app.sh  docker-compose.yml  ksql.commands  schema_registry.config  schema_registry_docker.config  start-ccloud.sh  start-docker.sh  start.sh  statements.sql  stop-ccloud.sh  stop-common.sh  stop-docker.sh  stop.sh  submit_datagen_pageviews_config.sh  submit_datagen_pageviews_config_docker.sh  submit_datagen_pageviews_docker_config.sh  submit_datagen_users_config.sh  submit_replicator_config.sh  submit_replicator_docker_config.sh  submit_replicator_schema_migration_config.sh
ccloud-monitoring/: Dockerfile  Makefile  README.md  datagen_ccloud_pageviews.json  docker-compose.yml  start.sh
ccloud-observability/: .gitignore  Dockerfile  Makefile  README.md  checkstyle.xml  docker-compose.yml  log4j.properties  pom.xml  start.sh  stop.sh
clickstream/: README.md  docker-compose.yml  (+8 more)
clients/cloud/rust/: Cargo.toml  README.md  build.rs
clients/cloud/rust/src/: consumer.rs  producer.rs  utils.rs
(+1153 files in other folders)
